NEWS - OpenPrinting CUPS Filters v1.13.1 - 2016-12-17
-----------------------------------------------------

CHANGES IN V1.13.2

	- driverless: When listing printers let the device ID contain
	  "AppleRaster" (for Apple Raster printers) and "PWGRaster"
	  (for IPP Everywhere printers) in the "CMD" field.
	- driverless: Added "-T 3" to the ippfind command line. This
	  makes ippfind search the Bonjour broadcasts for up to 3
	  seconds when searching for IPP printers, raising the
	  reliability in finding all of them (Debian bug #848712).

CHANGES IN V1.13.1

	- cups-browsed: Avoid erroring out when restarting after a
	  crash (with generated queues not deleted due to the crash)
	  and the configuration option
	  CreateRemoteCUPSPrinterQueues=No being set.
	- cups-browsed: If CUPS is stopped while cups-browsed is
          running and there are queue for IPP network printers (not
          remote CUPS queues) on restart of CUPS the still existing
          local CUPS queue is not correctly re-connected with
          cups-browsed and therefore gets removed after a
          timeout. This should be fixed after a clean-up of
          re-connecting with remaining queues from a previous session
          (Debian bug #848223).
	- cups-browsed: Generated queues did not get removed on
          shutdown (Debian bug #848167).
	- libcupsfilters: Let PPD generator for driverless printing
	  suppress page sizes which the printer reports more than
	  once (CUPS Issue #4933).
	- driverless, libcupsfilters: Make "driverless list" output
	  and output of driverless as CUPS backend in discovery mode
	  add the word "driverless" to its output, to make it easier
	  to set up driverless printers with printer setup tools.
	  Made the NickName of the generated PPDs also match with the
	  "driverless list" output.

CHANGES IN V1.13.0

	- cups-browsed: Use the httpGetAddr() only with CUPS 2.0.x or
	  newer, as older CUPS versions do not provide it (Bug #1381).