@@ -3,6 +3,14 @@ NEWS - OpenPrinting CUPS Filters v1.13.1 - 2016-12-17
 
 CHANGES IN V1.13.2
 
+	- libcupsfilters: If the IPP-polled printer has the
+	  "sides-supported" attribute, determine the need of a
+	  "Duplex" option solely whether the attribute has a
+	  "two-sided-long-edge" choice and ignore the "duplex"
+	  parameter of the ppdCreateFromIPP() function call. This lets
+	  the more precise information coming from the IPP query
+	  always be preferred against information from the Bonjour
+	  record.
 	- driverless: When listing printers let the device ID contain
 	  "AppleRaster" (for Apple Raster printers) and "PWGRaster"
 	  (for IPP Everywhere printers) in the "CMD" field.
